// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionSheet renders and selects a menu item 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "iconName": "check",
        "text": "Test 1",
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`ActionSheet renders with all props 1`] = `
<Animator
  finalValue={0}
  initialValue={300}
  shouldAnimateIn={true}
  shouldAnimateOut={false}
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "bottom": 0,
        "elevation": 100,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "zIndex": 100,
      },
      Object {
        "backgroundColor": "blue",
      },
    ]
  }
  type="translateY"
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "opacity": 1,
        "paddingHorizontal": 8,
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#E0E0E0",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "height": 100,
          "opacity": 1,
          "paddingHorizontal": 8,
          "paddingVertical": 16,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Array [
              Object {
                "color": "#212121",
                "fontSize": 24,
              },
              Array [
                Object {
                  "color": "#212121",
                  "fontSize": 24,
                  "marginRight": 8,
                },
                Object {
                  "color": "red",
                },
              ],
            ],
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
          ]
        }
      >
        
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#212121",
              "flex": 1,
              "fontSize": 17,
              "textAlign": "right",
            },
            Array [
              Object {
                "color": "#212121",
                "fontSize": 17,
                "textAlign": "left",
              },
              Object {
                "color": "red",
              },
            ],
          ]
        }
      >
        Test 1
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "opacity": 1,
        "paddingHorizontal": 8,
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#E0E0E0",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "height": 100,
          "opacity": 1,
          "paddingHorizontal": 8,
          "paddingVertical": 16,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Array [
              Object {
                "color": "#212121",
                "fontSize": 24,
              },
              Array [
                Object {
                  "color": "#212121",
                  "fontSize": 24,
                  "marginRight": 8,
                },
                Object {
                  "color": "red",
                },
              ],
            ],
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
          ]
        }
      >
        
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#212121",
              "flex": 1,
              "fontSize": 17,
              "textAlign": "right",
            },
            Array [
              Object {
                "color": "#212121",
                "fontSize": 17,
                "textAlign": "left",
              },
              Object {
                "color": "red",
              },
            ],
          ]
        }
      >
        Test 2
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "opacity": 1,
        "paddingHorizontal": 8,
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#E0E0E0",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "height": 100,
          "opacity": 1,
          "paddingHorizontal": 8,
          "paddingVertical": 16,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Array [
              Object {
                "color": "#212121",
                "fontSize": 24,
              },
              Array [
                Object {
                  "color": "#212121",
                  "fontSize": 24,
                  "marginRight": 8,
                },
                Object {
                  "color": "red",
                },
              ],
            ],
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
          ]
        }
      >
        
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#212121",
              "flex": 1,
              "fontSize": 17,
              "textAlign": "right",
            },
            Array [
              Object {
                "color": "#212121",
                "fontSize": 17,
                "textAlign": "left",
              },
              Object {
                "color": "red",
              },
            ],
          ]
        }
      >
        Cancel
      </Text>
    </View>
  </View>
</Animator>
`;

exports[`ActionSheet renders with minimum required props 1`] = `
<Animator
  finalValue={0}
  initialValue={112}
  shouldAnimateIn={true}
  shouldAnimateOut={false}
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "bottom": 0,
        "elevation": 100,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "zIndex": 100,
      },
      undefined,
    ]
  }
  type="translateY"
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "opacity": 1,
        "paddingHorizontal": 8,
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#E0E0E0",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "height": 56,
          "opacity": 1,
          "paddingHorizontal": 8,
          "paddingVertical": 16,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Array [
              Object {
                "color": "#212121",
                "fontSize": 24,
              },
              Array [
                Object {
                  "color": "#212121",
                  "fontSize": 24,
                  "marginRight": 8,
                },
                undefined,
              ],
            ],
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
          ]
        }
      >
        
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#212121",
              "flex": 1,
              "fontSize": 17,
              "textAlign": "right",
            },
            Array [
              Object {
                "color": "#212121",
                "fontSize": 17,
                "textAlign": "left",
              },
              undefined,
            ],
          ]
        }
      >
        Option 1
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "opacity": 1,
        "paddingHorizontal": 8,
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#E0E0E0",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "height": 56,
          "opacity": 1,
          "paddingHorizontal": 8,
          "paddingVertical": 16,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Array [
              Object {
                "color": "#212121",
                "fontSize": 24,
              },
              Array [
                Object {
                  "color": "#212121",
                  "fontSize": 24,
                  "marginRight": 8,
                },
                undefined,
              ],
            ],
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
          ]
        }
      >
        
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#212121",
              "flex": 1,
              "fontSize": 17,
              "textAlign": "right",
            },
            Array [
              Object {
                "color": "#212121",
                "fontSize": 17,
                "textAlign": "left",
              },
              undefined,
            ],
          ]
        }
      >
        Cancel
      </Text>
    </View>
  </View>
</Animator>
`;
